welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: value update is not a member of String
	if (litMessage() = R)
            ^BDRBuggle:11: error: value update is not a member of String
	if (litMessage() = L)
            ^BDRBuggle:16: error: value update is not a member of String
	if (litMessage() = I)
            ^BDRBuggle:22: error: value update is not a member of String
	if (litMessage() = A)
            ^BDRBuggle:26: error: value update is not a member of String
	if (litMessage() = B)
            ^BDRBuggle:31: error: value update is not a member of String
	if (litMessage() = C)
            ^BDRBuggle:37: error: value update is not a member of String
	if (litMessage()= Z)
            ^BDRBuggle:41: error: value update is not a member of String
	if (litMessage() = Y)
            ^BDRBuggle:47: error: value update is not a member of String
	if (litMessage() = X)
            ^